--- a/tr/tests.html
+++ b/tr/tests.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilişsel Testler - DEEP BRAİN</title>
-    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/tests.html" />
-    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/tests.html" />
     <link rel="stylesheet" href="/style.css">
-    </head>
-<body>
+    <!-- Diğer head etiketleriniz (favicon, fonts, vb.) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+</head>
+<body id="page-tests">
     <header>
         <h1>DEEP BRAİN</h1>
         <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
@@ -20,7 +26,6 @@
             <a href="/tr/hakkimda.html">Hakkımda</a>
         </nav>
     </header>
-
     <main>
         <div id="cognitive-tests-screen">
             <h2>Bilişsel Testler</h2>
@@ -30,54 +35,38 @@
                 <button class="game-choice" data-game="trail-making" disabled>İz Sürme Testi (Yakında!)</button>
             </div>
         </div>
-    
         <div id="wcst-main-container" class="hidden page-container">
-            <div id="game-content">
-                <div id="wcst-start-screen">
-                    <h2>Wisconsin Kart Eşleme Testi</h2>
-                    <div class="wcst-education-level">
-                        <h3>Lütfen eğitim düzeyinizi seçin:</h3>
-                        <div class="education-options">
-                            <button class="education-btn" data-level="ilkokul">İlkokul</button>
-                            <button class="education-btn" data-level="ortaokul">Ortaokul</button>
-                            <button class="education-btn" data-level="lise">Lise</button>
-                            <button class="education-btn" data-level="universite">Üniversite</button>
-                        </div>
-                    </div>
-                    <div class="wcst-instructions">
-                        <h3>Yönergeler</h3>
-                        <p>Bu biraz değişik bir oyun...</p>
-                    </div>
-                    <button id="wcst-start-btn" disabled>Teste Başla</button>
-                </div>
-                <div id="wcst-game-screen" class="hidden">
-                    <div class="wcst-info-panel">
-                        <div>Tamamlanan Kategori: <span id="wcst-categories">0</span></div>
-                        <div>Toplam Hata: <span id="wcst-total-errors">0</span></div>
-                        <div>Perseveratif Hata: <span id="wcst-perse-errors">0</span></div>
-                        <div>Kalan Kart: <span id="wcst-cards-left">128</span></div>
-                    </div>
-                    <div id="stimulus-cards-container" class="card-area"></div>
-                    <div id="wcst-feedback"></div>
-                    <div id="response-card-container" class="card-area">
-                        <div id="current-response-card"></div>
+            <div id="wcst-start-screen">
+                <h2>Wisconsin Kart Eşleme Testi</h2>
+                <div class="wcst-education-level">
+                    <h3>Lütfen eğitim düzeyinizi seçin:</h3>
+                    <div class="education-options">
+                        <button class="education-btn" data-level="ilkokul">İlkokul</button>
+                        <button class="education-btn" data-level="ortaokul">Ortaokul</button>
+                        <button class="education-btn" data-level="lise">Lise</button>
+                        <button class="education-btn" data-level="universite">Üniversite</button>
                     </div>
                 </div>
-                <div id="wcst-results-modal" class="game-over-modal hidden">
-                    <div class="modal-content">
-                        <h3>Test Sonuçları</h3>
-                        <div class="wcst-results"></div>
-                        <button id="wcst-back-to-tests">Testler Sayfasına Geri Dön</button>
-                    </div>
+                <div class="wcst-instructions">
+                    <h3>Yönergeler</h3>
+                    <p>Bu biraz değişik bir oyun çünkü testi nasıl yapacağınız konusunda size verilen herbir kartı dört anahtar karttan biriyle eşleştirmeniz gerekiyor. Kartı neye göre eşleştireceğinizi size söyleyemem ama yaptığınız eşleşmenin doğru mu yanlış mı olduğunu her seferinde size söyleyeceğim. Bu testte zaman sınırlaması olmadığından acele etmeniz gerekmemektedir.</p>
                 </div>
+                <button id="wcst-start-btn" disabled>Teste Başla</button>
             </div>
-            <button id="back-to-menu">Geri Dön</button> 
+            <div id="wcst-game-screen" class="hidden">
+                <div class="wcst-info-panel">
+                    <div>Kategoriler: <span id="wcst-categories">0</span></div>
+                    <div>Hatalar: <span id="wcst-total-errors">0</span></div>
+                    <div>Kalan Kart: <span id="wcst-cards-left">128</span></div>
+                </div>
+                <div id="stimulus-cards-container" class="card-area"></div>
+                <div id="wcst-feedback"></div>
+                <div id="response-card-container" class="card-area"><div id="current-response-card"></div></div>
+            </div>
+            <button id="back-to-menu">Geri Dön</button>
         </div>
     </main>
-
-    <footer>
-        <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
-    </footer>
+    <footer><p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p></footer>
     <script src="/script.js"></script>
 </body>
 </html>
