--- a/tr/games.html
+++ b/tr/games.html
@@ -49,5 +49,5 @@
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
     <script src="/script.js"></script>
-<body id="page-games">
+<body>
 </html>
