--- a/tr/games.html
+++ b/tr/games.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zihinsel Egzersizler ve Oyunlar - DEEP BRAİN</title>
+    <title>Cognitive Exercises & Games - DEEP BRAIN</title>
     <link rel="stylesheet" href="/style.css">
     
-    <!-- SEO ve Çok Dilli Yapı İçin Linkler -->
+    <!-- SEO and Multilanguage Links -->
     <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/games.html" />
     <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/games.html" />
     
-    <!-- Favicon Linkleri -->
+    <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -21,37 +21,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="page-games-en">
     <header>
-        <h1>DEEP BRAİN</h1>
-        <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
+        <h1>DEEP BRAIN</h1>
+        <p>Cognitive Exercises Guided by a Neurology Doctor</p>
         <nav class="main-nav">
-            <a href="/tr/index.html">Ana Sayfa</a>
-            <a href="/tr/games.html" class="active">Zihinsel Egzersiz & Oyunlar</a>
-            <a href="/tr/tests.html">Bilişsel Testler</a>
-            <a href="/tr/blog.html">Blog</a>
-            <a href="/tr/hakkimda.html">Hakkımda</a>
+            <a href="/en/index.html">Home</a>
+            <a href="/en/games.html" class="active">Cognitive Exercises & Games</a>
+            <a href="/en/tests.html">Cognitive Tests</a>
+            <a href="/en/blog.html">Blog</a>
+            <a href="/en/about.html">About</a>
         </nav>
     </header>
     <main>
         <div id="selection-screen">
-            <h2>Hangi Becerinizi Geliştirmek İstersiniz?</h2>
+            <h2>Which skill would you like to improve?</h2>
             <div class="game-selection-container">
-                <button class="game-choice" data-game="adam-asmaca">Adam Asmaca (Dil Becerisi)</button>
-                <button class="game-choice" data-game="sirali-hatirlama">Sıralı Hatırlama (Hafıza)</button>
-                <button class="game-choice" data-game="stroop-testi">Stroop Testi (Dikkat)</button>
-                <button class="game-choice" data-game="n-back">N-Back Testi (Çalışma Belleği)</button>
+                <button class="game-choice" data-game="adam-asmaca">Hangman (Language)</button>
+                <button class="game-choice" data-game="sirali-hatirlama">Sequence Memory (Memory)</button>
+                <button class="game-choice" data-game="stroop-testi">Stroop Test (Attention)</button>
+                <button class="game-choice" data-game="n-back">N-Back Test (Working Memory)</button>
             </div>
         </div>
         <div id="game-container" class="hidden">
             <div id="game-content">
-                <!-- Oyun içeriği buraya dinamik olarak yüklenecek -->
+                <!-- Game content will be dynamically loaded here -->
             </div>
-            <button id="back-to-menu">Geri Dön</button>
+            <button id="back-to-menu">Back</button>
         </div>
     </main>
     <footer>
-        <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
+        <p>© 2025 - Deep Brain. All rights reserved.</p>
     </footer>
     <script src="/script.js"></script>
 </body>
