--- a/en/games.html
+++ b/en/games.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cognitive Exercises and Games - DEEP BRAIN</title>
+    <title>Cognitive Exercises & Games - DEEP BRAIN</title>
+    <link rel="stylesheet" href="/style.css">
     <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/games.html" />
     <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/games.html" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="/style.css">
-    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
-<body id="page-games-en">
+<body>
     <header>
         <h1>DEEP BRAIN</h1>
         <p>Cognitive Exercises Guided by a Neurology Doctor</p>
@@ -28,7 +27,6 @@
             <a href="/en/about.html">About</a>
         </nav>
     </header>
-
     <main>
         <div id="selection-screen">
             <h2>Which skill would you like to improve?</h2>
@@ -39,16 +37,16 @@
                 <button class="game-choice" data-game="n-back">N-Back Test (Working Memory)</button>
             </div>
         </div>
-
-        <div id="game-container" class="hidden"> 
-            <div id="game-content"></div>
-            <button id="back-to-menu">Back</button> 
+        <div id="game-container" class="hidden">
+            <div id="game-content">
+                <!-- Game content will be dynamically loaded here -->
+            </div>
+            <button id="back-to-menu">Back</button>
         </div>
     </main>
-
     <footer>
         <p>© 2025 - Deep Brain. All rights reserved.</p>
     </footer>
     <script src="/script.js"></script>
-<body>
+</body>
 </html>
