--- a/en/index.html
+++ b/en/index.html
@@ -13,7 +13,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="/style.css">
-    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
@@ -30,7 +29,6 @@
             <a href="/en/about.html">About</a>
         </nav>
     </header>
-
     <main>
         <section id="homepage-main-content" class="homepage-content">
             <img src="/brainmrısynapsis.webp" alt="Abstract Brain Network Image" class="hero-image">
@@ -44,15 +42,10 @@
                 <a href="/en/blog.html" class="cta-button">Articles & Scientific Content</a>
             </div>
         </section>
-        
-        <div id="game-container" class="hidden"> 
-            <div id="game-content"></div>
-            <button id="back-to-menu">Back to Menu</button>
-        </div>
     </main>
-
     <footer>
         <p>© 2025 - Deep Brain. All rights reserved.</p>
     </footer>
+    <script src="/script.js"></script>
 </body>
 </html>
