--- a/tr/tests.html
+++ b/tr/tests.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <h1>DEEP BRAİN</h1>
-        <p>Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
+        <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
         <nav class="main-nav">
             <a href="/tr/index.html">Ana Sayfa</a>
             <a href="/tr/games.html">Zihinsel Egzersiz & Oyunlar</a>
