--- a/tr/tests.html
+++ b/tr/tests.html
@@ -16,17 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>DEEP BRAİN</h1>
-        <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
-        <nav class="main-nav">
-            <a href="/tr/index.html">Ana Sayfa</a>
-            <a href="/tr/games.html">Zihinsel Egzersiz & Oyunlar</a>
-            <a href="/tr/tests.html" class="active">Bilişsel Testler</a>
-            <a href="/tr/blog.html">Blog</a>
-            <a href="/tr/hakkimda.html">Hakkımda</a>
-        </nav>
-    </header>
+    <!-- HEADER BÖLÜMÜ BU SAYFADAN KALDIRILDI -->
     <main>
         <div id="cognitive-tests-screen">
             <h2>Bilişsel Testler</h2>
@@ -43,7 +33,7 @@
         </div>
     </main>
     <footer>
-        <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
+        <p>© 2025 - Deep Brain. Tüm hakları saklıdır. <a href="/tr/index.html" style="color: white; text-decoration: underline;">Ana Sayfa'ya Dön</a></p>
     </footer>
     <script src="/script.js"></script>
 </body>
