--- a/tr/index.html
+++ b/tr/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="/style.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
@@ -29,12 +30,13 @@
             <a href="/tr/hakkimda.html">Hakkımda</a>
         </nav>
     </header>
+
     <main>
         <section id="homepage-main-content" class="homepage-content">
             <img src="/brainmrısynapsis.webp" alt="Soyut Beyin Ağı Görseli" class="hero-image">
             <h2>Zihninizi Keşfedin, Potansiyelinizi Açığa Çıkarın</h2>
             <p>
-                DEEP BRAİN, bir nöroloji doktorunun rehberliğinde, bilimsel temelli zihin egzersizleri ve nöropsikometrik testler sunan kapsamlı bir platformdur. Amacımız, hafızanızı keskinleştirmek, dikkatinizi artırmak, problem çözme becerilerinizi geliştirmek ve genel bilişsel sağlığınızı desteklemektir. Ücretsiz ve etkileşimli oyunlarımızla beyin fitness'ınızı bir üst seviyeye taşıyın.
+                DEEP BRAİN, bir nöroloji doktorunun rehberliğinde, bilimsel temelli zihin egzersizleri ve nöropsikometrik testler sunan kapsamlı bir platformdur. Amacımız, hafızanızı keskinleştirmek, dikkatinizi artırmak, problem çözme becerilerinizi geliştirmek ve genel bilişsel sağlığınızı desteklemektir. Ücretsiz ve etkileşimli oyunlarımızla beyininizi zinde tutun.
             </p>
             <div class="call-to-action-buttons">
                 <a href="/tr/games.html" class="cta-button">Zihinsel Egzersiz & Oyunlar</a>
@@ -42,11 +44,10 @@
                 <a href="/tr/blog.html" class="cta-button">Makale ve Bilimsel İçerikler</a>
             </div>
         </section>
-        <!-- Bu sayfa oyun içermediği için game-container burada gerekli değil -->
     </main>
+
     <footer>
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
-    <script src="/script.js"></script>
-</body>
+    </body>
 </html>
