--- a/tr/blog.html
+++ b/tr/blog.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - Nörolog Gözünden Zihin Sağlığı | DEEP BRAİN</title>
-    <meta name="description" content="Beyin sağlığı, hafıza, dikkat ve öğrenme üzerine nöroloji doktoru tarafından yazılmış makaleler ve bilimsel ipuçları.">
+    <title>Blog - DEEP BRAİN</title>
     <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/blog.html" />
     <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/blog.html" />
-    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/tr/blog.html" />
-    <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -17,56 +14,42 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <header>
-        <h1>DEEP BRAİN</h1>
-        <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
-        <nav class="main-nav">
-            <!-- Düzeltilmiş Yollar -->
-            <a href="/tr/index.html">Ana Sayfa</a>
-            <a href="/tr/blog.html">Blog</a>
-            <a href="/tr/hakkimda.html">Hakkımda</a>
-        </nav>
-    </header>
-
     <main>
         <div class="page-container">
-            <h2>Makaleler ve Yazılar</h2>
-            <p class="page-intro">Beyin sağlığınızı korumak ve bilişsel yeteneklerinizi geliştirmek için hazırladığım yazılara buradan ulaşabilirsiniz.</p>
+            <h1 class="page-title">DEEP BRAİN Blog</h1>
+            <p class="page-intro">Nöroloji, beyin sağlığı ve bilişsel bilim alanındaki en son gelişmeler, ipuçları ve araştırmalar için blogumuzu takip edin.</p>
 
             <div class="article-list">
-                <!-- Düzeltilmiş Makale Linkleri -->
-                <article class="article-preview">
-                    <h3><a href="/tr/beslenme-bilissel-etkiler.html">Beyin Gücünüzü Artırın: Beslenmenin Bilişsel Fonksiyonlara Etkisi</a></h3>
-                    <p class="article-meta">Yayınlanma Tarihi: 10.07.2025</p>
-                    <p class="article-excerpt">Tükettiğimiz besinlerin hafıza, dikkat ve öğrenme gibi bilişsel fonksiyonlarımız üzerinde doğrudan bir etkiye sahip olduğunu biliyor muydunuz? Beyninizi en iyi şekilde beslemenin bilimsel yollarını keşfedin.</p>
+                <div class="article-preview">
+                    <h3><a href="/tr/beslenme-bilissel-etkiler.html">Beslenmenin Bilişsel İşlevler Üzerindeki Etkileri</a></h3>
+                    <p class="article-meta">Yayınlanma Tarihi: 15 Mayıs 2025</p>
+                    <p class="article-excerpt">Ne yediğimizin beynimiz üzerindeki etkileri, hafıza, odaklanma ve genel bilişsel performansa nasıl katkıda bulunduğunu keşfedin...</p>
                     <a href="/tr/beslenme-bilissel-etkiler.html" class="read-more">Devamını Oku →</a>
-                </article>
-                <article class="article-preview">
-                    <h3><a href="/tr/makale-hafiza-nasil-guclenir.html">Unutkanlığa Karşı Hafızanızı Güçlendirmenin 5 Bilimsel Yolu</a></h3>
-                    <p class="article-meta">Yayınlanma Tarihi: 15 Şubat 2025</p>
-                    <p class="article-excerpt">Günlük hayatta sıkça yaşadığımız unutkanlık aslında yönetilebilir bir durumdur. Bu yazıda, nörobilimin ışığında hafızanızı daha keskin hale getirecek, uygulaması kolay 5 yöntemi inceliyoruz...</p>
+                </div>
+                <div class="article-preview">
+                    <h3><a href="/tr/makale-hafiza-nasil-guclenir.html">Hafıza Nasıl Güçlendirilir? Günlük Hayat İçin İpuçları</a></h3>
+                    <p class="article-meta">Yayınlanma Tarihi: 10 Mayıs 2025</p>
+                    <p class="article-excerpt">Hafızanızı geliştirmek için bilimsel olarak kanıtlanmış yöntemler ve günlük pratikler hakkında bilgi edinin...</p>
                     <a href="/tr/makale-hafiza-nasil-guclenir.html" class="read-more">Devamını Oku →</a>
-                </article>
-                <article class="article-preview">
-                    <h3><a href="/tr/stroop-testi-bilimi.html">Stroop Testi'nin Arkasındaki Bilim: Beynimiz Çelişkilerle Nasıl Başa Çıkar?</a></h3>
-                    <p class="article-meta">Yayınlanma Tarihi: 30.06.2025</p>
-                    <p class="article-excerpt">Neden renkli kelimeleri okumakta zorlanırız? Stroop etkisinin nörolojik temellerini ve bu basit testin dikkat kontrolümüz hakkında neler söylediğini keşfedin...</p>
+                </div>
+                <div class="article-preview">
+                    <h3><a href="/tr/stroop-testi-bilimi.html">Stroop Testi ve Beynin Dikkat Mekanizmaları</a></h3>
+                    <p class="article-meta">Yayınlanma Tarihi: 20 Nisan 2025</p>
+                    <p class="article-excerpt">Stroop Testi'nin arkasındaki bilimsel prensipleri ve beynin dikkat ile ketleme yeteneklerini nasıl ölçtüğünü anlayın...</p>
                     <a href="/tr/stroop-testi-bilimi.html" class="read-more">Devamını Oku →</a>
-                </article>
+                </div>
             </div>
-            
-            <!-- Düzeltilmiş Ana Sayfa Linki -->
-            <a href="/tr/index.html" class="back-to-home-link">Ana Sayfaya Dön</a>
+            <div class="back-button-container"> 
+                <a href="/tr/index.html" class="back-to-selection-button">Ana Sayfaya Dön</a>
+            </div>
         </div>
     </main>
 
     <footer>
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
-
-</body>
+    </body>
 </html>
