--- a/tr/index.html
+++ b/tr/index.html
@@ -49,5 +49,9 @@
     <footer>
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
-    </body>
+
+    <!-- DÜZELTME: Eksik olan script dosyası buraya eklendi -->
+    <script src="/script.js"></script>
+    
+</body>
 </html>
