--- a/tr/stroop-testi-bilimi.html
+++ b/tr/stroop-testi-bilimi.html
@@ -61,6 +61,9 @@
     <footer>
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
-
+    
+    <!-- DÜZELTME: Eksik olan script dosyası buraya eklendi -->
+    <script src="/script.js"></script>
+    
 </body>
 </html>
