--- a/tr/makale-hafiza-nasil-guclenir.html
+++ b/tr/makale-hafiza-nasil-guclenir.html
@@ -60,6 +60,8 @@
     <footer>
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
-
+    
+    <!-- DÜZELTME: Eksik olan script dosyası buraya eklendi -->
+    <script src="/script.js"></script>
 </body>
 </html>
